welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:3: error: reassignment to val
while( finie=false)
            ^BDR2:39: error: reassignment to val
     case _ => finie=true			  
                    ^